<resources>
    <string name="app_name">VotingSystem</string>
    <!-- TAG -->
    <string name="signInFgmt">signInFgmt</string>
    <string name="forgotPasswordFgmt">forgotPasswordFgmt</string>
    <string name="registerFgmt">registerFgmt</string>
    <!-- ACTIONS -->
    <string name="usernameValidation">usernameValidation</string>
    <string name="passwordValidation">passwordValidation</string>
    <string name="emailValidation">emailValidation</string>
    <string name="get_firm_names">getFirmNames</string>
    <!-- LOGIN -->
    <string name="app_logo">app_logo</string>
    <string name="input_logo">input_logo</string>
    <string name="username">Όνομα χρήστη</string>
    <string name="password">Κωδικός πρόσβασης</string>
    <string name="signin">Είσοδος</string>
    <string name="forgotpassword">Ξέχασες τον κωδικό σου?</string>
    <string name="register">Πρώτη φορά εδώ? Εγγραφή</string>
    <string name="email">E-mail</string>
    <string name="sendEmail">Αποστολή</string>
    <string name="signInHere">Διαθέτεις λογαριασμό?\nΣυνδέσου εδώ</string>
    <string name="submit">Εγγραφή</string>
    <string name="firmcode">Κωδικός Εταιρείας</string>
    <string name="confirmpassword">Επιβεβαίωση κωδικού</string>
    <string name="showPassword">ΕΜΦΑΝΙΣΗ</string>
    <string name="hidePassword">ΑΠΟΚΡΥΨΗ</string>
    <string name="required">required</string>
    <!-- ERRORS -->
    <string name="empty_fields">Παρακαλώ συμπλήρωσε όλα τα πεδία.</string>
    <string name="no_connection">Χωρίς πρόσβαση στο Internet. Παρακαλώ ξαναπροσπάθησε.</string>
    <string name="unavailable_service">Η υπηρεσία είναι μη διαθέσιμη. Παρακαλώ ξαναπροσπάθησε σύντομα.</string>
    <string name="error_occured">Ένα σφάλμα έχει προκύψει. Παρακαλώ ξαναπροσπάθησε.</string>
    <string name="empty_requried_field">Το πεδίο είναι υποχρεωτικό</string>
    <!-- PASSWORD HANGLING -->
    <string name="invalid_password_length">Αποδεκτό μέγεθος κωδικού, 8 χαρακτήρες</string>
    <string name="passwords_mismatch">Ασυμφωνία κωδικών</string>
    <!-- INPUT STAFF HANDLING -->
    <string name="input_ok">Διαθέσιμο</string>
    <string name="invalid_usernamepassword">Αποδεκτοί λατινικοί χαρακτήρες, νούμερα</string>
    <string name="invalid_email_input">Μη έγκυρη διεύθυνση</string>
    <string name="input_exists">Μη διαθέσιμο</string>
    <!-- INPUT FIELDS -->
    <string name="username_tag">username</string>
    <string name="password_tag">password</string>
    <string name="email_tag">email</string>
    <string name="firmcode_tag">firmcode</string>
    <string-array name="input_fields_array">
        <item>username</item>
        <item>password</item>
        <item>email</item>
        <item>firmcode</item>
    </string-array>
    <!-- NAVIGATION DRAWER ITEMS -->
    <string name="firm">Η Εταιρεία</string>
    <string name="mysurveys">Οι Έρευνες μου</string>
    <string name="newsurvey">Νέα Έρευνα</string>
    <string name="editsurvey">Επεξεργασία Έρευνας</string>
    <string name="viewresults">Προβολή Αποτελεσμάτων</string>
    <string name="settings">Ρύθμισεις</string>
    <string name="logout">Αποσυνδεση</string>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
    </array>

    /*
     * activity manifest labels
     *
     */












    <string name="adminBaseActivity">AdminBaseActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- Scale points array -->
    <string-array name="agree_array">
        <item>Strongly disagree</item>
        <item>Disagree</item>
        <item>Neither Agree nor Disagree</item>
        <item>Agree</item>
        <item>Strongly Agree</item>
    </string-array>



    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

</resources>
