<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="@dimen/container_width"
        android:layout_height="@dimen/container_height"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/logo_dimens"
            android:layout_height="@dimen/logo_dimens"
            android:layout_marginTop="@dimen/logo_marginTop"
            android:layout_marginBottom="@dimen/logo_marginBottom"
            android:background="@drawable/app_logo"
            android:contentDescription="@string/app_logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_container_height"
            android:paddingRight="8dp"
            android:background="@drawable/login_fields_container"
            android:layout_marginBottom="@dimen/marginBottom"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/logo_dimens_andBottom"
                android:layout_height="@dimen/logo_dimens_andBottom"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/input_logo_marginLeftRight"
                android:layout_marginRight="@dimen/input_logo_marginLeftRight"
                android:background="@drawable/username_icon"
                android:contentDescription="@string/input_logo" />

            <com.rey.material.widget.EditText
                android:id="@+id/signInUsernameEdt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="@dimen/common_width"
                android:inputType="textPersonName"
                android:textSize="@dimen/input_edt_textSize"
                android:textColor="@android:color/white"
                android:textColorHint="@color/input_hintColor"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/username"
                app:et_inputId="@+id/usernameEdt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_container_height"
            android:background="@drawable/login_fields_container"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/logo_dimens_andBottom"
                android:layout_height="@dimen/logo_dimens_andBottom"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/input_logo_marginLeftRight"
                android:layout_marginRight="@dimen/input_logo_marginLeftRight"
                android:background="@drawable/password_icon"
                android:contentDescription="@string/input_logo" />

            <com.rey.material.widget.EditText
                android:id="@+id/signInPasswordEdt"
                android:layout_width="163dp"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textSize="@dimen/input_edt_textSize"
                android:textColor="@android:color/white"
                android:textColorHint="@color/input_hintColor"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                app:et_inputId="@+id/passwordEdt" />

            <TextView
                android:id="@+id/showHidePasswordTtv"
                android:layout_width="77dp"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:gravity="center"
                android:textSize="10sp"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/errorresponseTtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:layout_marginBottom="25dp"
            android:textSize="@dimen/txVerror_textSize"
            android:textStyle="bold"
            android:textColor="@color/txVerrorColor"/>

        <com.rey.material.widget.Button
            android:id="@+id/signInBtn"
            android:layout_width="@dimen/action_btn_width"
            android:layout_height="@dimen/action_btn_height"
            android:layout_marginBottom="@dimen/marginBottom"
            android:textColor="@android:color/white"
            android:background="@color/actionBtnColor"
            android:text="@string/signin"
            app:rd_enable="true"
            app:rd_maxRippleRadius="match_view"
            app:rd_rippleColor="#d9ef6c00"
            app:rd_rippleType="wave" />

        <TextView
            android:id="@+id/registerTtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <View
        android:layout_width="@dimen/common_width"
        android:layout_height="@dimen/view_height"
        android:layout_marginBottom="@dimen/marginBottom"
        android:background="@color/viewBackgroundColor" />

    <TextView
        android:id="@+id/forgotPasswordTtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/forgotpassword" />

</LinearLayout>
