<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="@dimen/container_width"
        android:layout_height="@dimen/container_height"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/logo_dimens_portrait"
            android:layout_height="@dimen/logo_dimens_portrait"
            android:layout_marginTop="-90dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/app_logo"
            android:contentDescription="@string/app_logo"/>

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="53dp"
            android:background="@drawable/login_fields_container"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/email_icon" />

            <EditText
                android:id="@+id/emailEdt"
                android:layout_width="225dp"
                android:layout_height="match_parent"
                android:textSize="13sp"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:hint="@string/email" />

        </LinearLayout>

        <Button
            android:id="@+id/sendEmailBtn"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginBottom="15dp"
            android:textColor="@android:color/white"
            android:background="#ccEF6C00"
            android:text="@string/sendEmail" />

        <TextView
            android:id="@+id/signInHereTtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <View
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_marginBottom="15dp"
        android:background="#ccffffff" />

    <TextView
        android:id="@+id/registerTtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white" />

</LinearLayout>